Closed Bug 874825 Opened 12 years ago Closed 12 years ago

IonMonkey: HAS_ARGS_OBJ flag lost when bailing out to baseline

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla24
Tracking Status
firefox21 --- unaffected
firefox22 --- unaffected
firefox23 - fixed
firefox24 - fixed

People

(Reporter: jandem, Assigned: jandem)

References

Details

(Keywords: regression)

Attachments

(1 file)

Attached patch PatchSplinter Review
Uncovered by the patch in bug 868431. The problem is that initArgsObjUnchecked sets the HAS_ARGS_OBJ flag on the frame, so we should call it after we call setFlags. Filing as separate bug so that we can track it for Firefox 23.
Attachment #752655 - Flags: review?(kvijayan)
Attachment #752655 - Flags: review?(kvijayan) → review+
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla24
Comment on attachment 752655 [details] [diff] [review] Patch [Approval Request Comment] Bug caused by (feature/regressing bug #): Bug 860145 User impact if declined: Correctness bugs. Testing completed (on m-c, etc.): On m-c for a few days. Risk to taking this patch (and alternatives if risky): Very low. String or IDL/UUID changes made by this patch: None.
Attachment #752655 - Flags: approval-mozilla-aurora?
Attachment #752655 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
untracking since it looks like this is about correctness and not user impact or stability.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: