Bug 874825 - Correctly set HAS_ARGS_OBJ flag when bailing out to baseline. r=djvj